Issue 2: Center align button in footer

--- a/src/components/projects/Project.module.scss
+++ b/src/components/projects/Project.module.scss
@@ -77,12 +77,13 @@
     align-items: center;
     padding: 10px;
     width: 100%; 
+    text-align: center;
   }
 
-  .card__footer .button {
-    display: block;  
-    margin: 0 auto;  
-  }
+  // .card__footer .button {
+  //   display: block;  
+  //   margin: 0 auto;  
+  // }
 
   // .role {
   //   position: absolute;
